add serde version

--- a/deno_component_workspace_example/denort/README.org
+++ b/deno_component_workspace_example/denort/README.org
@@ -77,3 +77,12 @@ dependencies = [
 #+begin_src shell
 cargo build
 #+end_src
+
+** the serde version
+
+
+#+begin_example
+serde = { version = "=1.0.221", features = ["derive"] }
+#+end_example
+
+see [[https://github.com/DioxusLabs/dioxus/issues/4661][Cannot "cargo install dioxus-cli"" #4661]]
