--- a/deno_component_workspace_example/denort/README.org
+++ b/deno_component_workspace_example/denort/README.org
@@ -89,3 +89,84 @@ see [[https://github.com/DioxusLabs/dioxus/issues/4661][Cannot "cargo install di
 
 
 ** libsui embeded rust code here in denort
+
+** denort node package download
+
+In run.rs, it download npm package.
+#+begin_src rust
+// use a dummy npm registry url
+let npm_registry_url = Url::parse("https://localhost/").unwrap();
+let root_dir_url = Arc::new(Url::from_directory_path(&root_path).unwrap());
+let main_module = root_dir_url.join(&metadata.entrypoint_key).unwrap();
+let npm_global_cache_dir = root_path.join(".deno_compile_node_modules");
+let pkg_json_resolver = Arc::new(PackageJsonResolver::new(
+    sys.clone(),
+    Some(Arc::new(PackageJsonThreadLocalCache)),
+));
+let npm_registry_permission_checker = {
+    let mode = match &metadata.node_modules {
+        Some(NodeModules::Managed {
+            node_modules_dir: Some(path),
+        }) => NpmRegistryReadPermissionCheckerMode::Local(PathBuf::from(path)),
+        Some(NodeModules::Byonm { .. }) => NpmRegistryReadPermissionCheckerMode::Byonm,
+        Some(NodeModules::Managed {
+            node_modules_dir: None,
+        })
+            | None => NpmRegistryReadPermissionCheckerMode::Global(npm_global_cache_dir.clone()),
+    };
+    NpmRegistryReadPermissionChecker::new(sys.clone(), mode)
+};
+let node_resolution_sys = NodeResolutionSys::new(sys.clone(), None);
+let (in_npm_pkg_checker, npm_resolver) = match metadata.node_modules {
+    Some(NodeModules::Managed { node_modules_dir }) => {
+        // create an npmrc that uses the fake npm_registry_url to resolve packages
+        let npmrc = Arc::new(ResolvedNpmRc {
+            default_config: deno_npm::npm_rc::RegistryConfigWithUrl {
+                registry_url: npm_registry_url.clone(),
+                config: Default::default(),
+            },
+            scopes: Default::default(),
+            registry_configs: Default::default(),
+        });
+        let npm_cache_dir = Arc::new(NpmCacheDir::new(
+            &sys,
+            npm_global_cache_dir,
+            npmrc.get_all_known_registries_urls(),
+        ));
+        let snapshot = npm_snapshot.unwrap();
+        let maybe_node_modules_path =
+            node_modules_dir.map(|node_modules_dir| root_path.join(node_modules_dir));
+        let in_npm_pkg_checker = DenoInNpmPackageChecker::new(CreateInNpmPkgCheckerOptions::Managed(
+            ManagedInNpmPkgCheckerCreateOptions {
+                root_cache_dir_url: npm_cache_dir.root_dir_url(),
+                maybe_node_modules_path: maybe_node_modules_path.as_deref(),
+            },
+        ));
+        let npm_resolution = Arc::new(NpmResolutionCell::new(NpmResolutionSnapshot::new(snapshot)));
+        let npm_resolver = NpmResolver::<DenoRtSys>::new::<DenoRtSys>(
+            NpmResolverCreateOptions::Managed(ManagedNpmResolverCreateOptions {
+                npm_resolution,
+                npm_cache_dir,
+                sys: sys.clone(),
+                maybe_node_modules_path,
+                npm_system_info: Default::default(),
+                npmrc,
+            }),
+        );
+        (in_npm_pkg_checker, npm_resolver)
+    }
+    Some(NodeModules::Byonm {
+        root_node_modules_dir,
+    }) => {
+        let root_node_modules_dir = root_node_modules_dir.map(|p| vfs.root().join(p));
+        let in_npm_pkg_checker = DenoInNpmPackageChecker::new(CreateInNpmPkgCheckerOptions::Byonm);
+        let npm_resolver = NpmResolver::<DenoRtSys>::new::<DenoRtSys>(
+            NpmResolverCreateOptions::Byonm(ByonmNpmResolverCreateOptions {
+                sys: node_resolution_sys.clone(),
+                pkg_json_resolver: pkg_json_resolver.clone(),
+                root_node_modules_dir,
+            }),
+        );
+        (in_npm_pkg_checker, npm_resolver)
+    }
+#+end_src
