--- a/deno_component_workspace_example/deno/README.org
+++ b/deno_component_workspace_example/deno/README.org
@@ -7,3 +7,9 @@ copy from https://github.com/denoland/deno/tree/main/cli
 #+begin_src rust
 DenoSubcommand::Run(run_flags)
 #+end_src
+
+** deno_lib loaded_module_source_to_module_source_code
+
+#+begin_src rust
+use deno_lib::loader::loaded_module_source_to_module_source_code;
+#+end_src
