--- a/sqlx_workspace_example/sqlx_u256_bigdecimal_example/README.org
+++ b/sqlx_workspace_example/sqlx_u256_bigdecimal_example/README.org
@@ -5,7 +5,12 @@ created by chatgpt
 ** running postgresql docker
 
 #+begin_src shell
-docker run --name my_postgres -e POSTGRES_PASSWORD=mypassword -d -p 5432:5432 postgres:12.19-bullseye
+docker run \
+  --name my_postgres \
+  -e POSTGRES_PASSWORD=mypassword \
+  -d \
+  -p 5432:5432 \
+  postgres:18.1
 #+end_src
 
 ** run sqlx
